--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <!-- Welcome Page -->
     <section class="page" id="welcome">
       <h1 class="title">🎉 Happy Birthday! 🎉</h1>
-      <p class="subtitle">hallo selamat ulang tahu :D</p>
+      <p class="subtitle">hallo selamat ulang tahum :D</p>
       <button class="next-button" onclick="navigateTo('message')">klik ini</button>
     </section>
 
     <!-- Message Page -->
     <section class="page hidden" id="message">
-      <h1 class="title">A Special Message 📝</h1>
+      <h1 class="title">pesan spesial📝</h1>
       <p class="message">
         halo nana,<br><br>
         nih hadiah nya, semoga panjang umur dan sehat selalu🎂🎁🎉
